Updates for v2 content and moving pages around

--- a/app/views/layinghens/current/eligibility/aviary-pullets/housing-density.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/housing-density.html
@@ -37,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['housing-density'] == 'Yes',
                             attributes: {
-                                    'data-next': 'pullet-requirements'
+                                    'data-next': '../ventilation/features'
                                 }
                         },
                         {
