--- a/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-aviary.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-aviary.html
@@ -63,7 +63,7 @@
                             value: 'Yes',
                             checked: true if data['multi-tier-aviary'] == 'Yes',
                             attributes: {
-                                    'data-next': '../ventilation/features'
+                                    'data-next': 'housing-density'
                                 }
                         },
                         {
