--- a/app/views/layinghens/current/eligibility/aviary/elim-features.html
+++ b/app/views/layinghens/current/eligibility/aviary/elim-features.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme - Manure removal
+    You cannot apply for a grant from this scheme - Aviary system features
 {% endblock %}
 
 {% block content %}
@@ -15,8 +15,17 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must have an integrated automatic manure-removal system to ensure good air quality.
+                    The aviary system must have:
                 </p>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        manure removal belts
+                    </li>
+                    <li>
+                        integrated non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
+                    </li>
+                </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
