--- a/app/views/layinghens/current/eligibility/building/lighting.html
+++ b/app/views/layinghens/current/eligibility/building/lighting.html
@@ -25,19 +25,19 @@
 
                 <ul class="govuk-hint govuk-list govuk-list--bullet">
                     <li>
-                        non-flicker LED light with a colour temperature between 2700 and 4000 Kelvin   
+                        non-flicker LED light with a colour temperature between 2700 and 4000 Kelvin
                     </li>
                     <li>
-                        capacity for zonal dimming between 0 and 60 lux  
+                        capacity for zonal dimming between 0 and 60 lux
                     </li>
                     <li>
-                        coverage of the entire floor-litter (scratch) area  
+                        coverage of the entire floor-litter (scratch) area
                     </li>
                     <li>
-                        a simulated stepped dawn and dusk (unless this is already provided as part of an aviary lighting system)  
+                        a simulated stepped dawn and dusk (unless this is already provided as part of an aviary lighting system)
                     </li>
                     <li>
-                        an option for red light 
+                        an option for red light
                     </li>
                 </ul>
 
@@ -76,7 +76,7 @@
                             value: 'No',
                             checked: true if data['lighting-features'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-features'
+                                    'data-next': 'elim-lighting'
                                 }
                         }
                     ]
