--- a/app/views/layinghens/current/eligibility/common/farmer-type.html
+++ b/app/views/layinghens/current/eligibility/common/farmer-type.html
@@ -10,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="legal-status" method="post">
+            <form action="one-thousand-birds" method="post">
 
                 {{ govukCheckboxes ({
                     idPrefix: 'farmer-type',
