--- a/app/views/layinghens/current/eligibility/ventilation/features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/features.html
@@ -57,7 +57,7 @@
                             value: 'Yes',
                             checked: true if data['ventilation-features'] == 'Yes',
                             attributes: {
-                                    'data-next': 'air-speed'
+                                    'data-next': 'specifications'
                                 }
                         },
                         {
@@ -76,6 +76,19 @@
                 }) }}
 
             </form>
+
+        </div>
+
+        <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+                <p>
+                    The ventilation system must be able to protect the birds in extreme heat. It must also be able to assess indoor air quality by monitoring indoor CO<sub>2</sub> levels.
+                </p>
+            </div>
 
         </div>
 
