--- a/app/views/layinghens/current/eligibility/veranda/elim-biosecurity.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-biosecurity.html
@@ -15,8 +15,17 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The veranda must be capable of being secured with mesh (with a maximum of 6mm spacing) during disease driven housing orders.
+                    The veranda must have:
                 </p>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        a mesh roller screen with a mesh hole size of 6mm or less running underneath the length of the roof, that fits securely against the wall when extended
+                    </li>
+                    <li>
+                        closable pop holes along the length of the building which are at least 35cm high and 40cm wide, unless the veranda is part of an indoor barn system
+                    </li>
+                </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
