--- a/app/views/layinghens/current/eligibility/veranda/elim-specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-specification.html
@@ -26,19 +26,10 @@
                         a waterproof insulated roof
                     </li>
                     <li>
-                        guttering and a downpipe to feed into the drainage system of the main building
-                    </li>
-                    <li>
                         a perimeter wall at least 1 metre high
                     </li>
                     <li>
-                        lockable pop holes within the perimeter wall, unless the veranda forms part of an indoor barn system
-                    </li>
-                    <li>
-                        mesh roller-screen system running underneath the length of the roof, that fits securely against the wall when extended
-                    </li>
-                    <li>
-                        a dimmable LED lighting system between 0 lux and 60 lux
+                        dimmable LED lighting system between 0 lux and 60 lux
                     </li>
                 </ul>
 
