--- a/app/views/layinghens/current/eligibility/aviary/features.html
+++ b/app/views/layinghens/current/eligibility/aviary/features.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the aviary system automatically remove manure?
+    Will the aviary system have these features?
 {% endblock %}
 
 {% block content %}
@@ -17,22 +17,43 @@
 
             <form method="post">
 
+                {% set hintHtml %}
+
+                    <p class="govuk-hint">
+                        The aviary system must have:
+                    </p>
+
+                    <ul class="govuk-list govuk-list--bullet govuk-hint">
+                        <li>
+                            manure removal belts
+                        </li>
+                        <li>
+                            integrated non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
+                        </li>
+                    </ul>
+
+                {% endset %}
+
+
                 {{ govukRadios ({
-                    idPrefix: 'aviary-manure',
-                    name: 'aviary-manure',
+                    idPrefix: 'aviary-features',
+                    name: 'aviary-features',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the aviary system automatically remove manure?',
+                            text: 'Will the aviary system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
+                    },
+                    hint: {
+                        html: hintHtml
                     },
                     items: [
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['aviary-manure'] == 'Yes',
+                            checked: true if data['aviary-features'] == 'Yes',
                             attributes: {
                                     'data-next': '../ventilation/features'
                                 }
@@ -40,7 +61,7 @@
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['aviary-manure'] == 'No',
+                            checked: true if data['aviary-features'] == 'No',
                             attributes: {
                                     'data-next': 'elim-features'
                                 }
@@ -63,7 +84,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    To ensure good air quality, the aviary system must have an integrated automatic manure-removal system.
+                    The aviary system must have an integrated automatic manure-removal system and a modern lighting system.
                 </p>
             </div>
 
